# carrier_pigeon

./: CMakeLists.txt  LICENSE  README.md  config.h.in  version.rc.in
include/: about.h  carrier_pigeon.h  client.h  common.h  main_window.h  sender_thread.h  server.h  settings.h  settings_manager.h
res/: carrier_pigeon_icon.icns  resources.qrc  resources.rc
src/: about.cpp  about.ui  carrier_pigeon.cpp  client.cpp  common.cpp  main.cpp  main_window.cpp  main_window.ui  sender_thread.cpp  server.cpp  settings.cpp  settings.ui  settings_manager.cpp
